--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,86 +1,71 @@
 <!DOCTYPE html>
-<html  lang="en">
+<html>
 
-<head>  
-    <meta charsot="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Socks</title>
-</head>
+    <head>
+        <title>Warwick Ramen Stand</title>
+        <link rel="stylesheet"  href="css/styles.css">
+    </head>
 
-<body>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a><li>
-            <li><a href="#">Accessories</a><li>
-            <li><a href="#">Socks</a><li>
-        </ul>
-    </nav>
-
-    <h1>Union Jack Socks - Navy</h1>
-
-    <section>
-        <img src="socks.jpg" width="500px" alt="Union Jack Socks">
-    </section>
-
-    <section>
-        <button>6 - 10</button>
-        <button>10.5 - 13</button>
-
-        <label for="quantity">Quantity</label>
-        <select name="quantity" id="quantity">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-        </select>
-
-        <p>Prices: <strong>￡9.99</strong></p>
-        <button>Add to bag</button>
-    </section>
-
-    <section>
-        <h2>Product Description</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit officiis aspernatur quia blanditiis 
-           et neque nesciunt? Sint adipisci distinctio impedit aspernatur ipsam obcaecati tenetur quod, ipsum alias! 
-           Voluptatem assumenda mollitia ea velit natus iure tenetur tempora repudiandae, quae illo eius.
-        <ul>
-            <li>Product Feature 1</li>
-            <li>Product Feature 2</li>
-            <li>Product Feature 3</li>
-            <li>Product Feature 4</li>
-        </ul>
-    </section>
-
-    <table>
-        <thead>
-            <tr>
-                <th>Delivery Option</th>
-                <th>Price</th>
-                <th>Estimated Delivery Time</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Standard Delivery</td>
-                <td>￡4.99</td>
-                <td>3-5 Working Days</td>
-            </tr>
-            <tr>
-                <td>Next Day Delivery</td>
-                <td>￡7.99</td>
-                <td>Next Working Day</td>
-            </tr>
-            <tr>
-                <td>Click & Collect</td>
-                <td>Free</td>
-                <td>Same Day</td>
-            </tr>
-
-        </tbody>
-    </table>
-
-
-</body>
+    <body>
+        <header class="header-class">
+            <h1>Welcome to Warwick Ramen Stand</h1>
+            <nav>
+                <ul>
+                    <li><a href="about.html" class="menu-item" id="about-link">About</a></li>
+                    <li><a href="contact.html" class="menu-item" id="contact-link">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <h2>Our Menu</h2>
+            <ul>
+                <li>
+                    <a href="Tonkotsu Ramen.html" class="menu-item" id="Tonkotsu Ramen-link">
+                    <h3>Tonkotsu Ramen</h3>
+                    <img src="images/Tonkotsu.jpg" alt="Tonkotsu Ramen">
+                </li>
+                <li>
+                    <h3>Shoyu Ramen</h3>
+                    <img src="images/Shoyu.jpg" alt="Shoyu Ramen">
+                </li>
+                <li>
+                    <h3>Miso Ramen</h3>
+                    <img src="images/Miso.jpg" alt="Miso Ramen">
+                </li>
+                <li>
+                    <h3>Veggie Ramen</h3>
+                    <img src="images/Veggie.jpg" alt="Veggie Ramen">
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Opening Hours</h2>
+            <table>
+                <tr>
+                    <th>Day</th>
+                    <th>Opening Time</th>
+                    <th>Closing Time</th>
+                </tr>
+                <tr>
+                    <td>Monday - Friday</td>
+                    <td>11:00 AM</td>
+                    <td>10:00 PM</td>
+                </tr>
+                <tr>
+                    <td>Saturday</td>
+                    <td>12:00 PM</td>
+                    <td>11:00 PM</td>
+                </tr>
+                <tr>
+                    <td>Sunday</td>
+                    <td>Closed</td>
+                    <td>Closed</td>
+                </tr>
+            </table>
+        </section>
+        <footer>
+            <p>Contact us at ramen@warwick.ac.uk</p>
+        </footer>
+    </body>
 
 </html>
